--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 .externalNativeBuild
 .cxx
 local.properties
+app/google-services.json
+.idea/deploymentTargetSelector.xml
+.idea/inspectionProfiles/Project_Default.xml
+app/google-services.json
